<resources>
    <string name="app_name">I Did It</string>
    <string name="completed_today">Completed Today</string>
    <string name="failed_today">Failed Today</string>
    <string name="no_habits"><font color='#f9fbe7'> You have no habit entries :(\n Press the <font color='#ffa842'>plus</font> button below\nto add some to your account!</font></string>
    <string name="habits">HABITS</string>
    <string name="idi">I DID IT</string>
    <string name="login_hont">Username</string>
    <string name="password_hont">Password</string>
    <string name="udit"><font color='#ffa842'>Udit</font> <font color='#f9fbe7'>Karode</font></string>
    <string name="karthik"><font color='#ffa842'>Karthik</font> <font color='#f9fbe7'>Arwin</font></string>
    <string name="himanshu"><font color='#ffa842'>Himanshu</font> <font color='#f9fbe7'>Jain</font></string>
    <string name="retvibe">a <font color='#ffa842'>retvibe</font> product</string>
    <string name="quote">Reinvent yourself!</string>
</resources>
