<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root"
        android:background="#212121"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/header"
            android:text="@string/idi"
            android:textSize="50sp"
            tools:ignore="MissingPrefix"
            fontPath="CircularB.ttf"
    />
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20sp"
    >

        <EditText
                android:id="@+id/user"
                android:background="@drawable/rounded_rectangle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="20sp"
                android:inputType="text"
                android:hint="@string/login_hont"
                android:textColorHint="#99212121"
                android:textColor="#212121"
                tools:ignore="Autofill"
        />

        <EditText
                android:id="@+id/pass"
                android:background="@drawable/rounded_rectangle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="20sp"
                android:inputType="textPassword"
                android:hint="@string/password_hont"
                android:textColorHint="#99212121"
                android:textColor="#212121"
                tools:ignore="Autofill"
        />

        <LinearLayout
                android:id="@+id/logregbutts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button"
                    android:textColor="#fbfbfb"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="10sp"
                    android:text="Login"
            />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button"
                    android:textColor="#fbfbfb"
                    android:layout_gravity="center_horizontal"
                    android:text="Register"
            />

        </LinearLayout>

        <ProgressBar
                android:id="@+id/loader_logreg"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="?aesthetic_accent"
                android:layout_marginTop="20sp"
                android:layout_gravity="center_horizontal"
        />

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/quote"
    />
    
</RelativeLayout>